# rules_rust

crate_universe/src/: splicing.rs  test.rs
crate_universe/src/metadata/: dependency.rs  metadata_annotation.rs
crate_universe/src/splicing/: crate_index_lookup.rs
crate_universe/test_data/metadata/crate_optional_deps_enabled/: Cargo.toml  metadata.json
crate_universe/test_data/private/: BUILD.bazel
crate_universe/tests/: cargo_integration_test.rs
docs/: .bazelrc  WORKSPACE.bazel
examples/nix_cross_compiling/bazel/toolchains/cc/wasm32-wasip1/: BUILD.bazel
examples/nix_cross_compiling/nix/: flake.nix
nix/: flake.nix
wasm_bindgen/: wasm_bindgen.bzl
