load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "metadata_generator",
    srcs = ["metadata_generator.py"],
    data = [
        "@rules_rust//rust/toolchain:current_cargo_files",
        "@rules_rust//rust/toolchain:current_rustc_files",
    ],
    env = {
        "CARGO": "/nix/store/cmqr5plybykwlb7a5cq0bhyc3hv7ww64-rust-mixed/bin/cargo",
        "RUSTC": "/nix/store/cmqr5plybykwlb7a5cq0bhyc3hv7ww64-rust-mixed/bin/rustc",
    },
)
